--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
- 
+    <script src="/js/iscroll.js"></script>
   </body>
 </html>
