--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_2053859_h1j461n7yzp.css">
+    <link rel="stylesheet" href="/css/animate.min.css">
   </head>
   <body>
     <noscript>
