--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,12 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_2053859_h1j461n7yzp.css">
     <link rel="stylesheet" href="/css/animate.min.css">
+    <link rel="stylesheet" href="/css/swiper.min.css">
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="/js/iscroll.js"></script>
+    <script src="/js/swiper.min.js"></script>
   </body>
 </html>
