--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,16 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title><%= htmlWebpackPlugin.options.title %></title>
   <link rel="stylesheet" href="http://at.alicdn.com/t/font_2053859_h1j461n7yzp.css">
-  <link rel="stylesheet" href="/css/animate.min.css">
-  <link rel="stylesheet" href="/css/swiper.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>css/animate.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>css/swiper.min.css">
 </head>
 
 <body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
-  <script src="/js/iscroll.js"></script>
-  <script src="/js/swiper.min.js"></script>
-  <script src="/js/fastClick.js"></script>
+  <script src="<%= BASE_URL %>js/iscroll.js"></script>
+  <script src="<%= BASE_URL %>js/swiper.min.js"></script>
+  <script src="<%= BASE_URL %>js/fastClick.js"></script>
   <script>
     if ('addEventListener' in document) {
       document.addEventListener('DOMContentLoaded', function () {
